# CMake

./: .gitignore  CMakeLists.txt  README.md  configure.sh
include/sample/: DemoClass.h
src/: main.cpp
src/sample/: DemoClass.cpp
